header meta tag 추가

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,4 @@
 {
-  "title": "Hello World!"
+  "title": "Blog Tag Maker",
+  "description": "This is a site where you can easily create hashtags for blogs such as Naver Blog and Tistory."
 }
