tags hashtag add/remove toggle 기능 추가

--- a/public/locales/en/contents.json
+++ b/public/locales/en/contents.json
@@ -1,5 +1,7 @@
 {
   "placeholder": "Please enter your tags.",
   "tellerLinesTitle": "lines",
-  "tellerCharactersTitle": "Characters"
+  "tellerCharactersTitle": "Characters",
+  "toolsToggleHashAddTitle": "Add",
+  "toolsToggleHashRemoveTitle": "Remove"
 }
