tags lines 30줄로 cutting 기능 추가

--- a/public/locales/en/contents.json
+++ b/public/locales/en/contents.json
@@ -3,5 +3,6 @@
   "tellerLinesTitle": "lines",
   "tellerCharactersTitle": "Characters",
   "toolsToggleHashAddTitle": "Add",
-  "toolsToggleHashRemoveTitle": "Remove"
+  "toolsToggleHashRemoveTitle": "Remove",
+  "toolsLineCuttingTitle": "Line Cutting"
 }
