--- a/public/locales/ko/contents.json
+++ b/public/locales/ko/contents.json
@@ -3,5 +3,6 @@
   "tellerLinesTitle": "줄",
   "tellerCharactersTitle": "자",
   "toolsToggleHashAddTitle": "추가",
-  "toolsToggleHashRemoveTitle": "제거"
+  "toolsToggleHashRemoveTitle": "제거",
+  "toolsLineCuttingTitle": "줄로 자르기"
 }
