tags 특수문자 제거 기능 추가

--- a/public/locales/en/contents.json
+++ b/public/locales/en/contents.json
@@ -4,5 +4,6 @@
   "tellerCharactersTitle": "Characters",
   "toolsToggleHashAddTitle": "Add",
   "toolsToggleHashRemoveTitle": "Remove",
-  "toolsLineCuttingTitle": "Line Cutting"
+  "toolsLineCuttingTitle": "Line Cutting",
+  "optionsRemoveSpecialCharsTitle": "Remove Special Characters"
 }
