--- a/public/locales/en/contents.json
+++ b/public/locales/en/contents.json
@@ -5,5 +5,6 @@
   "toolsToggleHashAddTitle": "Add",
   "toolsToggleHashRemoveTitle": "Remove",
   "toolsLineCuttingTitle": "Line Cutting",
-  "optionsRemoveSpecialCharsTitle": "Remove Special Characters"
+  "optionsRemoveSpecialCharsTitle": "Remove Special Characters",
+  "optionsClearTitle": "Clear"
 }
