--- a/public/locales/ko/contents.json
+++ b/public/locales/ko/contents.json
@@ -5,5 +5,6 @@
   "toolsToggleHashAddTitle": "추가",
   "toolsToggleHashRemoveTitle": "제거",
   "toolsLineCuttingTitle": "줄로 자르기",
-  "optionsRemoveSpecialCharsTitle": "특수문자 제거"
+  "optionsRemoveSpecialCharsTitle": "특수문자 제거",
+  "optionsClearTitle": "모두 비우기"
 }
