tags copy 기능 추가

--- a/public/locales/en/contents.json
+++ b/public/locales/en/contents.json
@@ -6,5 +6,6 @@
   "toolsToggleHashRemoveTitle": "Remove",
   "toolsLineCuttingTitle": "Line Cutting",
   "optionsRemoveSpecialCharsTitle": "Remove Special Characters",
-  "optionsClearTitle": "Clear"
+  "optionsClearTitle": "Clear",
+  "copyButtonTitle": "Copy"
 }
