--- a/public/locales/ko/contents.json
+++ b/public/locales/ko/contents.json
@@ -6,5 +6,6 @@
   "toolsToggleHashRemoveTitle": "제거",
   "toolsLineCuttingTitle": "줄로 자르기",
   "optionsRemoveSpecialCharsTitle": "특수문자 제거",
-  "optionsClearTitle": "모두 비우기"
+  "optionsClearTitle": "모두 비우기",
+  "copyButtonTitle": "전체 복사하기"
 }
