custom modal 추가

--- a/public/locales/en/contents.json
+++ b/public/locales/en/contents.json
@@ -7,5 +7,7 @@
   "toolsLineCuttingTitle": "Line Cutting",
   "optionsRemoveSpecialCharsTitle": "Remove Special Characters",
   "optionsClearTitle": "Clear",
-  "copyButtonTitle": "Copy"
+  "copyButtonTitle": "Copy",
+  "cancelButtonTitle": "Cancel",
+  "okButtonTitle": "OK"
 }
