--- a/public/locales/ko/contents.json
+++ b/public/locales/ko/contents.json
@@ -1,5 +1,5 @@
 {
-  "placeholder": "태그를 입력해주세요.",
+  "tagsPlaceholder": "태그를 입력해주세요.",
   "tellerLinesTitle": "줄",
   "tellerCharactersTitle": "자",
   "toolsToggleHashAddTitle": "추가",
